# Simulador-Sistema-Solar

./: .gitignore  Protocol.md  Readme.md  main.py  run.py  simulator_backend.py
backend/haskell/: CHANGELOG.md  LICENSE  simulator-backend.cabal
backend/haskell/app/: Main.hs
backend/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
backend/haskell/dist-newstyle/packagedb/ghc-9.4.8/: package.cache  simulator-backend-0.1.0.0-inplace.conf
backend/haskell/src/: CelestialBody.hs  Simulator.hs
backend/python/: simulator_backend.py
backend/python/physics/: celestial_body.py  physical_constants.py  simulator.py  vectors.py
frontend/: backend_proxy.py  camera.py  creator.py  renderer.py  window.py
physics/: bodies.py  collisions.py  gravity.py  simulator.py
ui/: camera.py  main_window.py  planet_adder.py  renderer.py  simulator_client.py
