cabal-version: 3.0
name: simulator-backend
version: 0.1.0.0
synopsis: Solar System simulator backend
license: BSD-3-Clause
license-file: LICENSE
author: Gabriel Tavares
maintainer: gabrielc.tavares02@gmail.com
category: Simulation
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import: warnings
    exposed-modules:
        CelestialBody
      , Simulator
    hs-source-dirs: src
    build-depends:
        base >=4.14 && <5
      , aeson >=2.0 && <2.2
      , bytestring >=0.10 && <0.12
      , unordered-containers >=0.2 && <0.3
      , text >=1.2 && <2.1
    default-language: Haskell2010

executable simulator-backend
    import: warnings
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base >=4.14 && <5
      , aeson >=2.0 && <2.2
      , bytestring >=0.10 && <0.12
      , unordered-containers >=0.2 && <0.3
      , text >=1.2 && <2.1
      , simulator-backend
    default-language: Haskell2010

